--- a/build.gradle
+++ b/build.gradle
@@ -37,12 +37,13 @@ def versions = [
         commonsIo                    : '2.6',
         commonsLang3                 : '3.9',
         commonsMath3                 : '3.6.1',
-        divCommonLib                 : '1.2.11',
+        divCommonLib                 : '1.2.9',
         dumbster                     : '1.7.1',
         elasticsearch                : '7.10.2',
         feignHttpClient              : '10.3.0',
         flyway                        : '6.5.5',
         googleAuth                   : '1.5.0',
+        gradlePitest                 : '1.4.6',
         guava                        : '30.1-jre',
         hibernateTypes               : '2.4.4',
         hmctsNotify                  : '3.14.1-RELEASE',
