--- a/src/integrationTest/resources/application-aat.properties
+++ b/src/integrationTest/resources/application-aat.properties
@@ -1,8 +1,8 @@
 # Add any test specific environment variables here
 idam.client.redirectUri=https://div-pfe-aat.service.core-compute-aat.internal/authenticated
-core_case_data.api.url=http://ccd-data-store-api-aat.service.core-compute-aat.internal
+core_case_data.api.url=http://ccd-data-store-api-demo.service.core-compute-demo.internal
 
 # Hardcoded for Kubernetes7
-idam.client.baseUrl=https://idam-api.aat.platform.hmcts.net
-idam.s2s-auth.url=http://rpe-service-auth-provider-aat.service.core-compute-aat.internal
-case_maintenance.api.url=http://div-cms-aat.service.core-compute-aat.internal
+idam.client.baseUrl=https://idam-api.demo.platform.hmcts.net
+idam.s2s-auth.url=http://rpe-service-auth-provider-demo.service.core-compute-demo.internal
+case_maintenance.api.url=http://div-cms-demo.service.core-compute-demo.internal
