--- a/charts/div-cos/values.preview.template.yaml
+++ b/charts/div-cos/values.preview.template.yaml
@@ -4,7 +4,7 @@ java:
     FEATURE_DN_REFUSAL: "true"
     FEATURE_RESP_SOLICITOR_DETAILS: "true"
     SOLICITOR_DN_REJECT_AND_AMEND: "true"
-    FEATURE_SHARE_A_CASE: "false"
+    FEATURE_SHARE_A_CASE: "true"
     FEATURE_REPRESENTED_RESPONDENT_JOURNEY: "true"
     PAY_BY_ACCOUNT: "true"
     SPRING_MAIL_PROPERTIES_MAIL_SMTP_STARTTLS_ENABLE: false
